# ocr

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: test.yaml
ocr/: dependencies.py  main.py
ocr/core/: job_manager.py
ocr/core/schemas/: image.py
ocr/logger/: logger.py
ocr/routers/: image_async.py  image_sync.py  img_async.py  img_sync.py  utils.py
tests/: conftest.py  test.py  test_dependencies.py  test_main.py
tests/routers/: test_image_async.py  test_image_sync.py  test_img_async.py  test_img_sync.py
