[tool.poetry]
name = "ocr"
version = "0.0.1"
description = "OCR Service"
authors = ["egpivo <egpivo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
pytesseract = "^0.3.10"
opencv-python = "^4.9.0.80"
pytest = "^7.3.0"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.23.5.post1"
httpx = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
